@@ -7,3 +7,5 @@
      customHeader, etc. where a different value was being used.
 
   *  Added a binary argument to OAuthRequest and the helper functions oauthGET, etc.
+
+  *  Allow the caller of handshake() to specify the message for the user to grant permissions.
